# graphrag-kb-platform

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  README.zh.md  alembic.ini  install.ps1  install.sh  pyproject.toml
alembic/: env.py
docs/: logging-observability.md  verify-deepseek-2026-06-26.md  verify-deepseek-ollama-2026-06-28.md  verify-doc-delete-graph-shrink-2026-06-28.md  verify-mcp-query-server-2026-06-28.md  verify-multiturn-conversational-chat-2026-06-29.md  verify-ollama-2026-06-26.md  verify-real-llm-ollama-smoke-2026-06-28.md  verify-streaming-2026-06-29.md  verify-update-clean-state-2026-06-28.md  verify-websocket-2026-06-28.md
kb_platform/: __init__.py  logging_config.py  reconsolidate.py  retry.py  server.py  worker.py
scripts/: e2e_server.py  smoke_native_failover.py  smoke_native_llm.py  start.cmd  start.ps1  start.sh
tests/: conftest.py  test_adapter_fake.py  test_api_app.py  test_api_conversations.py  test_api_cost.py  test_api_document_detail.py  test_api_documents.py  test_api_export.py  test_api_graph.py  test_api_health.py  test_api_jobs.py  test_api_kbs.py  test_api_llm_health.py  test_api_query.py  test_api_realtime.py  test_apply_params.py  test_assemble_settings.py  test_atomic_steps.py  test_build_adapter_settings.py  test_build_default_adapter_embed.py  test_conversation_params_route.py  test_conversation_repo.py  test_conversation_service.py  test_cost_capture.py  test_crypto.py  test_cypher_export.py  test_cypher_export_load.py  test_delta_community_reports.py  test_delta_summarize.py  test_doc_reader.py  (+65 more)
(+296 files in other folders)
