[project]
name = "kb-platform"
version = "0.1.0"
description = "Knowledge base management platform on top of GraphRAG."
requires-python = ">=3.11,<3.14"
dependencies = [
    "graphrag==3.1.*",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "networkx>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
